Agrego nueva linea de codigo

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
     <body>
         <main>
             <h1>Aqui el titulo del blog</h1>
+            <h2>Fascinante</h2>
             <p>Informaciond el blog</p>
         </main>
     </body>
