--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MIblog</title>
+        <title>Bienvenido a mi MIblog</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
